--- a/index.html
+++ b/index.html
@@ -15,5 +15,37 @@
             <a>Contact</a>
         </nav>
     </header>
+    <section>
+        <h2>
+            Top 5 Books
+        </h2>
+        <ul>
+            <li>
+                <a href="https://www.goodreads.com/en/book/show/14438307-clean-ruby">
+                    <img src="images/cover-clean_ruby.jpg" alt="Clean Ruby by Jim Gay">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.goodreads.com/book/show/15847933-confident-ruby">
+                    <img src="images/cover-confident_ruby.jpg" alt="Confident Ruby by Avdi Grimm">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.goodreads.com/book/show/9364729-eloquent-ruby">
+                    <img src="images/cover-eloquent_ruby.jpg" alt="Eloquent Ruby by Russ Olsen">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.goodreads.com/book/show/16720439-ruby-science">
+                    <img src="images/cover-ruby_science.jpg" alt="Ruby Science by Thoughtbot">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.goodreads.com/book/show/3892688-the-well-grounded-rubyist">
+                    <img src="images/cover-well_grounded_rubyist.jpg" alt="The Well-Grounded Rubyist by David A. Black">
+                </a>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
