added navigation support between home and reviews pages

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <h1>WhatToRead</h1>
         <nav>
-            <a>Home</a>
-            <a>Reviews</a>
+            <a href="index.html">Home</a>
+            <a href="eloquent-ruby.html">Reviews</a>
             <a>Contact</a>
         </nav>
     </header>
