--- a/eloquent-ruby.html
+++ b/eloquent-ruby.html
@@ -64,5 +64,8 @@
                 Russ Olsen has helped me to gain more experience points in Ruby, and I must say that I am excited to learn more. If you too wish to learn more about Ruby, then you would be hard-pressed to find a better book than "Eloquent Ruby" in helping you to do so.</p>
         </article>
     </section>
+    <footer>
+        <p>© 2022 Max Pasqualis</p>
+    </footer>
 </body>
 </html>
