--- a/index.html
+++ b/index.html
@@ -47,5 +47,8 @@
             </li>
         </ul>
     </section>
+    <footer>
+        <p>© 2022 Max Pasqualis</p>
+    </footer>
 </body>
 </html>
