added header and nav functionality to contact page

--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,13 @@
     <title>WhatToRead</title>
 </head>
 <body>
-    
+    <header>
+        <h1>WhatToRead</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="eloquent-ruby.html">Reviews</a>
+            <a href="contact.html">Contact</a>
+        </nav>
+    </header>
 </body>
 </html>
