--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="eloquent-ruby.html">Reviews</a>
-            <a>Contact</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     <section>
