--- a/contact.html
+++ b/contact.html
@@ -15,5 +15,22 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
+    <section>
+        <h2>Contact Me</h2>
+        <img src="images/site-maintainer.png">
+        <p>Hi there, I'm your friendly neighborhood web dev! If you have any questions or feedback about this site, I'd be more than happy to chat! Feel free to contact me on my socials down below, or at <em>dev@email.com</em>. Thanks for visiting my site!</p>
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/">
+                    <img src="images/logo-facebook.png", alt="Facebook">
+                </a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/">
+                    <img src="images/logo-twitter.png">
+                </a>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
