--- a/contact.html
+++ b/contact.html
@@ -32,5 +32,9 @@
             </li>
         </ul>
     </section>
+    <footer>
+        <p>© 2022 Max Pasqualis</p>
+    </footer>
+</body>
 </body>
 </html>
